Trying to fix the map